--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -42,7 +42,7 @@
     src: url('../../public/static/fonts/InstrumentSerif-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
   }
 
   @font-face {
@@ -50,7 +50,7 @@
     src: url('../../public/static/fonts/InstrumentSerif-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
   }
 
   /* Palatino */
@@ -59,7 +59,7 @@
     src: url('../../public/static/fonts/palatinolinotype_roman.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap; /* This helps with font loading performance */
+    font-display: block; /* This helps with font loading performance */
   }
 
   /* Source Serif 4 */
@@ -68,7 +68,7 @@
     src: url('../../public/static/fonts/source-serif-4.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
   }
 
   @font-face {
@@ -76,7 +76,7 @@
     src: url('../../public/static/fonts/source-serif-4-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
   }
 
   /* Invert highlight colors */
